# OpenEnv-Hackathon

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  server.py
env/: __init__.py  data.py  environment.py  models.py
graders/: __init__.py  base_grader.py  task1_grader.py  task2_grader.py  task3_grader.py
server/: __init__.py  app.py
tasks/: __init__.py  task1_easy.py  task2_medium.py  task3_hard.py
tests/: test_environment.py
