[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Email Triage OpenEnv — Meta PyTorch Hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "openenv-core",
]

[project.scripts]
server = "server:app"

[tool.uv.scripts]
server = "uvicorn server:app --host 0.0.0.0 --port 7860"
